Incomplete changes for Java 9 and Presto 0.196.